src/snapshots/decompiler__tests__logical_vars__assign_in_composite.snap
---
source: src/tests.rs
expression: output
---
               0: mov qword ptr [rdi+10h],0
               0: mov qword ptr [rdi+8],0
               0: mov qword ptr [rdi],0
               0: ret
mil program = 
program  47 instrs
    0 r12 <- #pre:stack_bottom
    1 r2 <- #pre:CF
    2 r3 <- #pre:PF
    3 r4 <- #pre:AF
    4 r5 <- #pre:ZF
    5 r6 <- #pre:SF
    6 r7 <- #pre:TF
    7 r8 <- #pre:IF
    8 r9 <- #pre:DF
    9 r10 <- #pre:OF
   10 r11 <- #pre:RBP
   11 r12 <- #pre:RSP
   12 r13 <- #pre:RIP
   13 r14 <- #pre:RDI
   14 r15 <- #pre:RSI
   15 r16 <- #pre:RAX
   16 r17 <- #pre:RBX
   17 r18 <- #pre:RCX
   18 r19 <- #pre:RDX
   19 r20 <- #pre:R8
   20 r21 <- #pre:R9
   21 r22 <- #pre:R10
   22 r23 <- #pre:R11
   23 r24 <- #pre:R12
   24 r25 <- #pre:R13
   25 r26 <- #pre:R14
   26 r27 <- #pre:R15
   27 r28 <- undef
   28 r29 <- undef
   29 r30 <- undef
   30 r31 <- undef
   31 r32 <- undef
   32 r33 <- undef
   33 r34 <- undef
   34 r28 <- const8   0 (0x0)
   35 r29 <- const8   16 (0x10)
   36 r29 <- add      r29,r14  qword
   37 r30 <- store    *r29 ← r28
   38 r28 <- const8   0 (0x0)
   39 r29 <- const8   8 (0x8)
   40 r29 <- add      r29,r14  qword
   41 r30 <- store    *r29 ← r28
   42 r28 <- const8   0 (0x0)
   43 r29 <- const8   0 (0x0)
   44 r29 <- add      r29,r14  qword
   45 r30 <- store    *r29 ← r28
   46 r28 <- ret      r16


ssa program  12 instrs
.B0:  in[]     ;; 0x0  47 insn 0 phis
  (  3)  r13 <- #pre:RDI
         r15 <- #pre:RAX
         r34 <- const8   0 (0x0)
         r36 <- addk     r13,16 qword
         r37 <- store    *r36 ← r34
         r38 <- const8   0 (0x0)
         r40 <- addk     r13,8 qword
         r41 <- store    *r40 ← r38
         r42 <- const8   0 (0x0)
         r44 <- get      r13
         r45 <- store    *r44 ← r42
         r46 <- ret      r15
