src/snapshots/decompiler__tests__logical_vars__simple.snap
---
source: src/tests.rs
expression: output
---
               0: lea eax,[rdi+rdi]
               0: ret
mil program = 
program  40 instrs
    0 r12 <- #pre:stack_bottom
    1 r2 <- #pre:CF
    2 r3 <- #pre:PF
    3 r4 <- #pre:AF
    4 r5 <- #pre:ZF
    5 r6 <- #pre:SF
    6 r7 <- #pre:TF
    7 r8 <- #pre:IF
    8 r9 <- #pre:DF
    9 r10 <- #pre:OF
   10 r11 <- #pre:RBP
   11 r12 <- #pre:RSP
   12 r13 <- #pre:RIP
   13 r14 <- #pre:RDI
   14 r15 <- #pre:RSI
   15 r16 <- #pre:RAX
   16 r17 <- #pre:RBX
   17 r18 <- #pre:RCX
   18 r19 <- #pre:RDX
   19 r20 <- #pre:R8
   20 r21 <- #pre:R9
   21 r22 <- #pre:R10
   22 r23 <- #pre:R11
   23 r24 <- #pre:R12
   24 r25 <- #pre:R13
   25 r26 <- #pre:R14
   26 r27 <- #pre:R15
   27 r28 <- undef
   28 r29 <- undef
   29 r30 <- undef
   30 r31 <- undef
   31 r32 <- undef
   32 r33 <- undef
   33 r34 <- undef
   34 r28 <- const8   0 (0x0)
   35 r28 <- add      r28,r14
   36 r29 <- mul      r14,0x1
   37 r28 <- add      r28,r29
   38 r16 <- with.l4  r16 ← r28
   39 r28 <- ret      r16


ssa program  7 instrs
.B0:  in[]     ;; 0x0  40 insn 0 phis
  (  2)  r13 <- #pre:RDI
         r15 <- #pre:RAX
         r35 <- get      r13
         r36 <- mul      r13,0x1
         r37 <- add      r35,r36
         r38 <- with.l4  r15 ← r37
         r39 <- ret      r38
